fix spacings

--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -28,7 +28,6 @@
     border: 1px solid transparent;
     border-bottom: 1px solid $gray-300;
     background-color: $white;
-    padding: $spacer ($spacer * 5);
 
     &.active {
       background-color: $gray-200;
