--- a/src/scss/custom/_tag.scss
+++ b/src/scss/custom/_tag.scss
@@ -10,8 +10,6 @@
   }
 
   &__remove-icon {
-    width: 0.75em;
-    height: 0.75em;
     margin-left: 0.5em;
   }
 }
